# triangle

./: CMakeLists.txt  triangle.c  triangle.cpp  triangle.h
